# dig

./: .env  .gitignore  .gitpod.yml  .golangci-lint.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  SECURITY.md  auto-add-genesis-account.sh  buf.gen.gogo.yaml  busbar.yml  chicken.bash  colllected_data.csv.example  config.yml  dig_validator.md  go.mod  go.sum  index.html  package-lock.json  readme.md  sims.mk  statesync.bash  statesyncrock.bash  test_node.sh  test_node2.sh  testnet-guide.md
.controller/config/: app.toml  config.toml  genesis.json  node_key.json  priv_validator_key.json
.github/: dependabot.yml  main.go
.github/workflows/: build.yml  codeql-analysis.yml  cosmosec.yml  docker.yml  flutter.yml  golangci-lint.yml  main.yml  pages.yml  pi.yml  release.yml  sdc.yml  sims.yml  starport.yml  statesync.yml
.pi/: Dockerfile  build.sh  dig.service  motd
Akash Info/: Dockerfile  run.sh
airdrop/: main.go
airdrop/api/: openapi.yaml
airdrop/go/: README.md  api_default.go  logger.go  model_digger.go  routers.go
airdrop/sdc/: .env  package.json
akash/: Dockerfile  seed.yml
app/: ante.go  app.go  encoding.go  export.go  prefix.go  sim_test.go  sims.yml  test_helpers.go  wasm_config.go
app/helpers/: test_helpers.go
app/params/: encoding.go
app/upgrade/: forks.go
audit/: README.md
cosmos-sdk/: go.mod  go.sum
cosmossdk/: go.sum
css/: chunk-vendors.93aa0e36.css  chunk-vendors.cae87027.css
digapp/: README.md  app.go  config.go  encoding.go  export.go  genesis.go  genesis_account.go  state.go  types.go
docs/: whitepaper.md
flutter/: .flutter-plugins-dependencies  .packages  pubspec.yaml
fonts/: icomoon.55b06fe0.55b06fe0.eot
iavl/: nodedb.go
ibctesting/: relay_test.go
js/: app.19a8d3bb.js  app.19a8d3bb.js.map  app.3abd27b9.js  app.3abd27b9.js.map  app.4fec0880.js  app.4fec0880.js.map  app.54007b6a.js  app.54007b6a.js.map  app.ac76edb7.js  app.ac76edb7.js.map  app.bd170fc3.js  app.bd170fc3.js.map  app.d3443054.js  app.d3443054.js.map  app.d7e1a7ac.js  app.d7e1a7ac.js.map
mobile/: .gitignore  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
networks/: README.md
scripts/: export_dig_holder.go  output.csv  protocgen.sh  protogen.sh  readme.md
simapp/: genesis.go  sim_test.go  state.go
smartcontract/: Cargo.toml  README.md  build.sh  package.json
smartcontract/contracts/dig-cw721/: Cargo.toml  README.md
smartcontract/contracts/dig-cw721/examples/: schema.rs
smartcontract/contracts/dig-cw721/src/: contract.rs  error.rs  lib.rs  metadata.rs  msg.rs  query.rs  state.rs
smartcontract/contracts/dig-minter/: .gitignore  Cargo.toml  README.md
smartcontract/contracts/dig-minter/examples/: schema.rs
smartcontract/contracts/dig-minter/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
test/: relay_test.go
testnet-1/: config.toml  genesis.json
types/: address.go
vue/: .eslintrc.yml  package-lock.json  package.json
webapp/: .env.local  README.md  config-overrides.js  config.env  package-lock.json  package.json
website/: README.md  package-lock.json  package.json
(+640 files in other folders)
