[package]
name = "dig-minter"
version = "0.1.0"
authors = ["kien6034 <trinhtrungkientb99@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw721 = "0.11.0"
cw721-base = { version = "0.11.0", features = ["library"] }
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta5" }
cw-storage-plus = "0.12.1"
cw-utils = "0.12.1"
cw2 = "0.12.1"
schemars = "0.8"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
url = "2.2.2"
anone-cw721 = { version = "0.1.0", features = ["library"] }
dig = {version="0.1.0", path="../../packages/dig"}


[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }